# airport-OpenGL

./: CMakeLists.txt  Camera.cpp  Camera.hpp  README.md  main.cpp
objects/house/: house.mtl
shaders/: shadow.vert
